High level section headings, filled out author list

--- a/RTN-034.tex
+++ b/RTN-034.tex
@@ -16,7 +16,11 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-Phil Marshall
+Phil Marshall, 
+Amanda Bauer,
+Bob Blum,
+Cathy Petry,
+Christine Soldahl
 }
 
 \setDocRef{RTN-034}
@@ -36,7 +40,7 @@ This document describes the system for planning budgets and staffing in Vera C. 
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
-  \addtohist{1}{YYYY-MM-DD}{Unreleased.}{Phil Marshall}
+  \addtohist{1}{2022-04-28}{Initial version.}{Phil Marshall}
 }
 
 
@@ -49,6 +53,23 @@ This document describes the system for planning budgets and staffing in Vera C. 
 
 % ADD CONTENT HERE
 % You can also use the \input command to include several content files.
+
+\section{Requirements}
+\label{sec:reqs}
+
+\section{Design}
+\label{sec:dsgn}
+
+\section{Implementation}
+\label{sec:impl}
+
+\section{Operation}
+\label{sec:oper}
+
+\section{Maintenance}
+\label{sec:mntn}
+
+
 
 \appendix
 % Include all the relevant bib files.
